# Experimental-Compiler

./: .gitignore  CMakeLists.txt  Compiler.txt  LICENSE  README.md  example.txt  main.cpp
bld/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Experimental-Compiler.sln  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  compile_commands.json  func.ilk  func.vcxproj  func.vcxproj.filters
bld/func.dir/Debug/: func.exe.recipe  func.ilk
bld/func.dir/Debug/func.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bld/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
bld/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
bld/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
bld/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: codegen.cpp  codegen.h  environment.cpp  environment.h  error.cpp  error.h  file_io.cpp  file_io.h  main.cpp  parser.cpp  parser.h
